--- a/Telerik.Sitefinity.AMP/Telerik.Sitefinity.AMP.csproj
+++ b/Telerik.Sitefinity.AMP/Telerik.Sitefinity.AMP.csproj
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <EnhancerAssembly>$(SolutionDir)packages\Telerik.DataAccess.Fluent.2016.2.822.1\tools\enhancer\enhancer.exe</EnhancerAssembly>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,6 +33,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ServiceStack">
+      <HintPath>..\packages\ServiceStack.Signed.4.0.52\lib\net40\ServiceStack.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Client">
+      <HintPath>..\packages\ServiceStack.Client.Signed.4.0.52\lib\net40\ServiceStack.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Common">
+      <HintPath>..\packages\ServiceStack.Common.Signed.4.0.52\lib\net40\ServiceStack.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Interfaces">
+      <HintPath>..\packages\ServiceStack.Interfaces.4.0.52\lib\portable-wp80+sl5+net40+win8+monotouch+monoandroid+xamarin.ios10\ServiceStack.Interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Text">
+      <HintPath>..\packages\ServiceStack.Text.Signed.4.0.52\lib\net40\ServiceStack.Text.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -75,8 +91,15 @@
     <Compile Include="Data\OpenAccess\AMPFluentMapping.cs" />
     <Compile Include="Data\OpenAccess\AMPOpenAccessDataProvider.cs" />
     <Compile Include="Data\OpenAccess\AMPStorageMetadataSource.cs" />
-    <Compile Include="Models\AmpPages.cs" />
+    <Compile Include="Models\AmpPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Web\Services\AmpServiceStackPlugin.cs" />
+    <Compile Include="Web\Services\AmpWebService.cs" />
+    <Compile Include="Web\Services\Dto\AmpPageDto.cs" />
+    <Compile Include="Web\Services\Dto\AmpPageInsertRequest.cs" />
+    <Compile Include="Web\Services\Dto\AmpPagesRequest.cs" />
+    <Compile Include="Web\Services\Dto\AmpPageUpdateRequest.cs" />
+    <Compile Include="Web\Services\Dto\AmpPageDeleteRequest.cs" />
     <Compile Include="Web\UI\AmpPageses\AmpPagesesEmptyPage.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -87,7 +110,6 @@
     <Content Include="Configuration\readme.txt" />
     <Content Include="FieldControls\readme.txt" />
     <Content Include="Web\Scripts\readme.txt" />
-    <Content Include="Web\Services\readme.txt" />
     <EmbeddedResource Include="Web\UI\AmpPageses\AmpPagesesEmptyPage.ascx">
       <SubType>ASPXCodeBehind</SubType>
     </EmbeddedResource>
