--- a/Telerik.Sitefinity.AMP/packages.config
+++ b/Telerik.Sitefinity.AMP/packages.config
@@ -1,5 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ServiceStack.Client.Signed" version="4.0.52" targetFramework="net45" />
+  <package id="ServiceStack.Common.Signed" version="4.0.52" targetFramework="net45" />
+  <package id="ServiceStack.Interfaces" version="4.0.52" targetFramework="net45" />
+  <package id="ServiceStack.Signed" version="4.0.52" targetFramework="net45" />
+  <package id="ServiceStack.Text.Signed" version="4.0.52" targetFramework="net45" />
+  <package id="Telerik.DataAccess.Core" version="2016.2.822.1" targetFramework="net40" />
   <package id="Telerik.DataAccess.Fluent" version="2016.2.822.1" targetFramework="net40" />
-<package id="Telerik.DataAccess.Core" version="2016.2.822.1" targetFramework="net40" />
 </packages>
