--- a/Telerik.Sitefinity.AMP/Telerik.Sitefinity.AMP.csproj
+++ b/Telerik.Sitefinity.AMP/Telerik.Sitefinity.AMP.csproj
@@ -35,12 +35,14 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -78,6 +80,7 @@
     <Compile Include="Models\AmpPages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web\UI\AmpPageses\AmpPagesesEmptyPage.cs" />
+    <Compile Include="Web\UI\AmpPagesView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -92,6 +95,10 @@
       <SubType>ASPXCodeBehind</SubType>
     </EmbeddedResource>
     <Content Include="Web\UI\readme.txt" />
+    <EmbeddedResource Include="Web\UI\Scripts\AmpPagesView.js" />
+    <EmbeddedResource Include="Web\UI\Views\AmpPagesView.ascx">
+      <SubType>ASPXCodeBehind</SubType>
+    </EmbeddedResource>
     <Content Include="Widgets\Form\readme.txt" />
     <Content Include="Widgets\Layout\readme.txt" />
     <Content Include="Widgets\Page\readme.txt" />
