--- a/SitefinityWebApp/packages.config
+++ b/SitefinityWebApp/packages.config
@@ -3,12 +3,15 @@
   <package id="AjaxControlToolkit" version="3.0.20820.0" targetFramework="net45" />
   <package id="AntiXSS" version="4.3.0" targetFramework="net45" />
   <package id="AWSSDK" version="2.3.52.0" targetFramework="net45" />
+  <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="CommonServiceLocator.Silverlight" version="1.0" targetFramework="net45" />
   <package id="CsvHelper" version="2.2.2" targetFramework="net45" />
   <package id="DirectShowLib-2005" version="2.1.0.0" targetFramework="net45" />
   <package id="DocumentFormat.OpenXml" version="1.0" targetFramework="net45" />
   <package id="Elasticsearch.Net" version="1.7.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
+  <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="linqtotwitterNET40" version="2.1.9.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
@@ -31,6 +34,7 @@
   <package id="Microsoft.Spatial" version="6.11.0" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Types" version="10.50.1600.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="MySql.Data" version="6.6.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
