--- a/Telerik.Sitefinity.AMP/Telerik.Sitefinity.AMP.csproj
+++ b/Telerik.Sitefinity.AMP/Telerik.Sitefinity.AMP.csproj
@@ -106,11 +106,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web\Services\AmpServiceStackPlugin.cs" />
     <Compile Include="Web\Services\AmpWebService.cs" />
+    <Compile Include="Web\Services\Dto\AmpComponentDto.cs" />
     <Compile Include="Web\Services\Dto\AmpPageDto.cs" />
+    <Compile Include="Web\Services\Dto\AmpPageFieldDto.cs" />
     <Compile Include="Web\Services\Dto\AmpPageInsertRequest.cs" />
     <Compile Include="Web\Services\Dto\AmpPagesRequest.cs" />
     <Compile Include="Web\Services\Dto\AmpPageUpdateRequest.cs" />
     <Compile Include="Web\Services\Dto\AmpPageDeleteRequest.cs" />
+    <Compile Include="Web\Services\Dto\WrapperTagDto.cs" />
     <Compile Include="Web\UI\AmpPageses\AmpPagesesEmptyPage.cs" />
     <Compile Include="Web\UI\AmpPagesView.cs" />
   </ItemGroup>
