--- a/Telerik.Sitefinity.AMP/packages.config
+++ b/Telerik.Sitefinity.AMP/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
   <package id="RazorGenerator.Mvc" version="2.3.12" targetFramework="net45" />
