Implemented configuration endpoint

--- a/Telerik.Sitefinity.AMP/packages.config
+++ b/Telerik.Sitefinity.AMP/packages.config
@@ -19,5 +19,6 @@
   <package id="Telerik.Sitefinity.Content" version="9.2.6200.0" targetFramework="net451" />
   <package id="Telerik.Sitefinity.Feather.Core" version="1.7.600.0" targetFramework="net45" />
   <package id="Telerik.Sitefinity.Mvc" version="1.7.600.0" targetFramework="net45" />
+  <package id="Telerik.Sitefinity.SiteSync" version="9.2.6200.0" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
 </packages>
