Modified AMP details page UI

--- a/Telerik.Sitefinity.AMP/packages.config
+++ b/Telerik.Sitefinity.AMP/packages.config
@@ -15,6 +15,7 @@
   <package id="Sitefinity.RazorEngine" version="3.0.8.0" targetFramework="net45" />
   <package id="Telerik.DataAccess.Core" version="2016.2.822.1" targetFramework="net40" />
   <package id="Telerik.DataAccess.Fluent" version="2016.2.822.1" targetFramework="net40" />
+  <package id="Telerik.Sitefinity.Core" version="9.2.6200.0" targetFramework="net451" />
   <package id="Telerik.Sitefinity.Feather.Core" version="1.7.600.0" targetFramework="net45" />
   <package id="Telerik.Sitefinity.Mvc" version="1.7.600.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
