--- a/Telerik.Sitefinity.AMP/Telerik.Sitefinity.AMP.csproj
+++ b/Telerik.Sitefinity.AMP/Telerik.Sitefinity.AMP.csproj
@@ -150,6 +150,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AmpComponents\GalleryAmpComponent.cs" />
     <Compile Include="AmpComponents\IAmpComponent.cs" />
     <Compile Include="AmpComponents\ImageAmpComponent.cs" />
     <Compile Include="AMPDataProvider.cs" />
