--- a/SitefinityWebApp/SitefinityWebApp.csproj
+++ b/SitefinityWebApp/SitefinityWebApp.csproj
@@ -1183,6 +1183,7 @@
     <Content Include="App_Data\Sitefinity\Configuration\SystemConfig.config" />
     <Content Include="App_Data\Sitefinity\Sitefinity.lic" />
     <Content Include="Views\AmpPage\Index.cshtml" />
+    <Content Include="Views\Shared\_AMPLayoutBlogs.cshtml" />
     <Content Include="Views\Shared\_AMPLayout.cshtml" />
   </ItemGroup>
   <ItemGroup />
